<resources>
    <string name="app_name">Layouts</string>
    <string name="app_heading">Travellers Site</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="email_type">abc@gmail.com</string>


    <string name="action_settings">Settings</string>
    <string name="reminder">Enter your name</string>
    <string name="place01">Himachal Pradesh</string>
    <string name="city01">Dharamshala</string>
    <string name="reviews">457 reviews</string>


    <string name="transport">Delux Bus</string>
    <string name="price">Rs.876/person</string>

</resources>