<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDDC39"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="33dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="113dp"
            android:layout_height="105dp"
            android:layout_marginStart="160dp"
            android:textAlignment="center"
            app:srcCompat="@drawable/tourismlogo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="10sp"
            android:text="@string/app_heading"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="#9C27B0"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textEmailAddress"
                android:text="@string/email_type" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/pass"
                android:textColor="#9C27B0"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:text="@string/pass" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/remember_me"
                android:textColor="#009688"
                android:textSize="20sp"
                tools:layout_marginLeft="50dp" />

            <Button
                style="@android:style/Widget.Holo.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_pass"
                android:textColor="#009688"
                android:textSize="20sp"
                app:iconTint="#E91E63"
                tools:targetApi="p" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>