<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80sp"
        android:text="@string/app_heading"
        android:textColor="#3F51B5"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:layout_marginLeft="70dp"
        tools:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="7dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/himachalpic" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place01"
                android:textColor="#040303"
                android:textSize="30sp"
                tools:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city01"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/rBar"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:background="#0CFFEB3B"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="SpeakableTextPresentCheck"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_weight=".5"
                android:text="@string/reviews"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>